@@ -1491,8 +1491,8 @@ COMMENTS=''
 
 LPARTS='        init defseq backquote defmacro macros1 macros2 defs1'
 LPARTS=$LPARTS' timezone places floatprint type defstruct format'
-LPARTS=$LPARTS' savemem trace cmacros compiler disassem defs2'
-LPARTS=$LPARTS' loop clos condition threads gstream xcharin keyboard'
+LPARTS=$LPARTS' savemem trace cmacros compiler defs2 loop clos'
+LPARTS=$LPARTS' disassem condition threads gstream xcharin keyboard'
 LPARTS=$LPARTS' screen beossock runprog query reploop dribble complete'
 LPARTS=$LPARTS' describe room edit macros3 clhs inspect gray'
 if [ $TSYS = master -o -n "$with_dynamic_ffi" ] ; then
